# Internationale

./: CMakeLists.txt
include/: ltbase.h
include/fw/: fw.h
include/hal/: hal.h
include/intermarx/: intermarx.h
include/intermarx/ex/: ex.h  runtime.h
include/ke/: ke.h
include/mm/: mm.h  pfndb.h  pool.h  vad.h
include/ob/: object.h  objectTypes.h
include/pal/: pal.h
include/ps/: cpu.h  crit.h  proc.h  ps.h  sched.h
include/rtl/: list.h  rtl.h
intermarx/: CMakeLists.txt  main.c
intermarx/ex/: CMakeLists.txt  ex.c  opcodes.c  runtime.c
intermarx/far/: CMakeLists.txt  far.c  trampoline.s
intermarx/hp/: CMakeLists.txt  hp.c  hpp.h
intermarx/ldr/: CMakeLists.txt  ldr.c
intermarx/mt/: CMakeLists.txt  mt.c
intermarx/ob/: CMakeLists.txt  ob.c
intermarx/pal/: CMakeLists.txt  corelib.c  pal.c
intermarx/rtl/: CMakeLists.txt  rtl.c
ltoskrnl/: CMakeLists.txt
ltoskrnl/fw/arch/: CMakeLists.txt
ltoskrnl/fw/arch/ia32/: CMakeLists.txt  bios.c  bios32.S  emul.c  entry.c  fwi.h  start.s  vesa.h
ltoskrnl/hal/arch/: CMakeLists.txt
ltoskrnl/hal/arch/ia32/: CMakeLists.txt  entry.c  gdt.c  hali.h  int.s  thread.c
ltoskrnl/ke/: CMakeLists.txt  entry.c
ltoskrnl/mm/: CMakeLists.txt  entry.c  pfndb.c  pool.c  vad.c
ltoskrnl/ob/: CMakeLists.txt  entry.c
ltoskrnl/pal/arch/ia32/: CMakeLists.txt  apm.c  apm.h  bios.c  bios32.S  emul.c  entry.c  pali.h  start.s  vesa.c  vesa.h
ltoskrnl/ps/: CMakeLists.txt  crit.c  entry.c  proc.c  psi.h  sched.c  thread.c
ltoskrnl/rtl/: CMakeLists.txt  entry.c  list.c
targets/ltoskrnl/: ia32.cmake  ia32.ld
(+8 files in other folders)
