
add_subdirectory(pal)
add_subdirectory(hal)
add_subdirectory(ke)
add_subdirectory(rtl)
add_subdirectory(ps)
add_subdirectory(mm)
add_subdirectory(ob)

target_link_libraries(ltoskrnl PUBLIC pal)
target_link_libraries(ltoskrnl PUBLIC hal)
target_link_libraries(ltoskrnl PUBLIC mm)
target_link_libraries(ltoskrnl PUBLIC ps)
target_link_libraries(ltoskrnl PUBLIC rtl)
target_link_libraries(ltoskrnl PUBLIC ob)